--- a/pages/final.html
+++ b/pages/final.html
@@ -15,10 +15,7 @@
         </a>
 
         <div class="heading1 semibold header-title">Fire Department</div>
-        <div class="logout">
-            <!-- <img src="../assets/image/logo-small.svg" class="logout-logo">
-            <div class="paragraph1 bold">Logout</div> -->
-        </div>
+        <div class="logout"></div>
     </div>
     <main class="main">
         <div class="container">
