--- a/pages/widgets.html
+++ b/pages/widgets.html
@@ -18,10 +18,7 @@
         </a>
 
         <div class="heading1 semibold header-title">Fire Department</div>
-        <div class="logout">
-            <img src="../assets/image/logo-small.svg" class="logout-logo">
-            <div class="paragraph1 bold">Logout</div>
-        </div>
+        <div class="logout"></div>
     </div>
     <main class="main">
         <div class="container">
@@ -58,7 +55,6 @@
                 <div class="card">
                     <div class="heading1 semibold">Clock</div>
                     <div class="container">
-                        <!-- <div class="mode-switch">Dark Mode</div> -->
                         <div class="clock">
                             <label style="--i: 1"><span>1</span></label>
                             <label style="--i: 2"><span>2</span></label>
@@ -101,46 +97,9 @@
                                 book.</div>
                             <!-- Add more slides as needed -->
                         </div>
-
                         <div class="carousel-dots" id="carousel-dots"></div>
                     </div>
-
-
-
-
                 </div>
-
-
-                <!-- <div class="card1">
-                    <div class="heading1 semibold">Atmosphere</div>
-                    <div class="atmosphere-div">
-                        <div class="tomorrow" data-location-id="057606" data-language="EN" data-unit-system="METRIC"
-                            data-skin="light" data-widget-type="upcoming"
-                            style="padding-bottom:22px;position:relative;">
-                            <a href="https://www.tomorrow.io/weather-api/" rel="nofollow noopener noreferrer"
-                                target="_blank"
-                                style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;">
-                                <img alt="Powered by the Tomorrow.io Weather API"
-                                    src="https://weather-website-client.tomorrow.io/img/powered-by.svg" />
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card1">
-                    <div class="heading1 semibold">Global air quality</div>
-                    <div class="atmosphere-div">
-                        <div class="tomorrow" data-location-id="" data-language="EN" data-unit-system="METRIC"
-                            data-skin="light" data-widget-type="aqiPollutant"
-                            style="padding-bottom:22px;position:relative;">
-                            <a href="https://www.tomorrow.io/weather-api/" rel="nofollow noopener noreferrer"
-                                target="_blank"
-                                style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;">
-                                <img alt="Powered by the Tomorrow.io Weather API"
-                                    src="https://weather-website-client.tomorrow.io/img/powered-by.svg" />
-                            </a>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </main>
