--- a/pages/widgets.html
+++ b/pages/widgets.html
@@ -26,7 +26,7 @@
                 <div class="card">
                     <div class="heading1 semibold">Calendar</div>
                     <div class="wrapper">
-                        <header>
+                        <header class="calendar-title">
                             <p class="current-date"></p>
                             <div class="icons">
                                 <span id="prev" class="material-symbols-rounded">
@@ -84,17 +84,11 @@
                     <div class="carousel-container">
                         <div class="carousel">
                             <div class="carousel-item">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.</div>
+                                industry. </div>
                             <div class="carousel-item">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.</div>
+                                industry. </div>
                             <div class="carousel-item">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.</div>
+                                industry. </div>
                             <!-- Add more slides as needed -->
                         </div>
                         <div class="carousel-dots" id="carousel-dots"></div>
