--- a/pages/widgets.html
+++ b/pages/widgets.html
@@ -84,10 +84,13 @@
                     <div class="carousel-container">
                         <div class="carousel">
                             <div class="carousel-item">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry. Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry. </div>
                             <div class="carousel-item">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry. Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry. </div>
                             <div class="carousel-item">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry. Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry. </div>
                             <!-- Add more slides as needed -->
                         </div>
