--- a/pages/final.html
+++ b/pages/final.html
@@ -22,6 +22,13 @@
             <div class="inner-container">
                 <div class="section1">
                     <div style="width: 33%;"></div>
+                    <div style="width: 33%;" class="left-content">
+                        <img src="../assets/image/clock-icon.svg" alt="" class="text-clock">
+                        <div>
+                            <div class="heading1">15 Aug, 2023</div>
+                            <div class="heading1">05:00 PM</div>
+                        </div>
+                    </div>
                     <div class="button1">
                         <div class="button-text">
                             <img src="../assets/image/button-clock.svg" alt="" class="btn-clock">
