final screen css

--- a/pages/final.html
+++ b/pages/final.html
@@ -51,6 +51,10 @@
                         <button class="primary-btn">Fire</button>
                         <button class="primary-btn">EMS</button>
                         <button class="primary-btn">EMS</button>
+                        <button class="primary-btn">Fire</button>
+                        <button class="primary-btn">Fire</button>
+                        <button class="primary-btn">EMS</button>
+                        <button class="primary-btn">EMS</button>
                     </div>
                 </div>
 
