--- a/pages/final.html
+++ b/pages/final.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bottom-text heading1">Contact: support@easealert.com | Phone: (xxx) xxx-xxx </div>
+            <div class="bottom-text">Contact: support@easealert.com | Phone: (xxx) xxx-xxx </div>
         </div>
     </main>
 
