--- a/pages/widgets.html
+++ b/pages/widgets.html
@@ -100,9 +100,7 @@
             </div>
         </div>
     </main>
-    <div class="bottom-text heading1">
-        <span>Contact: support@easealert.com | Phone: (xxx) xxx-xxx</span>
-    </div>
+    <div class="bottom-text">Contact: support@easealert.com | Phone: (xxx) xxx-xxx</div>
     <script src="../script/clock.js"></script>
     <script src="../script/calender.js"></script>
     <script src="../script/atmosphere.js"></script>
